[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Fonts/IconCounterFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cubes/Assets/09_harden.jpg" type="Texture" id=3]
[ext_resource path="res://Arena/AvatarPlayer.gd" type="Script" id=4]
[ext_resource path="res://Resources/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Arena/Assets/Alberich_face.png" type="Texture" id=6]
[ext_resource path="res://Arena/Assets/Engel_face.png" type="Texture" id=7]
[ext_resource path="res://Cubes/Assets/01_c_demoniaco.jpg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.164706, 0.619608, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
shadow_offset = Vector2( -2, 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.443137, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "on_turn"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Avatar:light_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Avatar:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Avatar:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Avatar:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Avatar:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="AvatarPlayer2" type="Node2D"]
position = Vector2( 712, 0 )
script = ExtResource( 4 )
avatar = ExtResource( 6 )
side = -1

[node name="Avatar" type="Sprite" parent="."]
position = Vector2( 260, 47 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Text" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 190.0
margin_top = 112.0
margin_right = 295.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
text = "Alberich"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitPoints" type="Control" parent="."]
margin_left = 16.0
margin_top = 15.0
margin_right = 216.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HitPoints"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 199.0
margin_top = 1.0
margin_right = 199.0
margin_bottom = 1.0
rect_scale = Vector2( -1, 1 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HitPoints"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "5/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsAnchor" type="Position2D" parent="."]
position = Vector2( 203, 84 )

[node name="DemonTokens" type="Node2D" parent="."]
position = Vector2( 202, 55 )

[node name="hp_armor" type="Node2D" parent="."]
visible = false
position = Vector2( 279, 101 )

[node name="icon" type="Sprite" parent="hp_armor"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="hp_armor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="demon_armor" type="Node2D" parent="."]
visible = false
position = Vector2( 251, 101 )

[node name="icon" type="Sprite" parent="demon_armor"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="demon_armor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/on_turn = SubResource( 6 )
